[gd_scene load_steps=6 format=3 uid="uid://bu802wrejoxy7"]

[ext_resource type="Script" uid="uid://bxanlmg4sgl3u" path="res://scenes/game/mines.gd" id="1_fyqyq"]
[ext_resource type="Script" uid="uid://bldynvbs8ownu" path="res://scenes/game/mine_zones.gd" id="3_2au7w"]
[ext_resource type="Script" uid="uid://dlii2oup33qw1" path="res://scenes/game/shop.gd" id="3_yh3sh"]
[ext_resource type="Texture2D" uid="uid://ct6tx5asymrmc" path="res://assets/sprites/momoyo.png" id="4_8ojic"]
[ext_resource type="Script" uid="uid://bsyo62gccx47c" path="res://scenes/game/idle_shop.gd" id="4_yh3sh"]

[node name="Mines" type="Node2D"]
script = ExtResource("1_fyqyq")

[node name="ShopButton" type="Button" parent="."]
offset_left = 100.0
offset_right = 200.0
offset_bottom = 100.0
text = "Shop"

[node name="IdleShopButton" type="Button" parent="."]
offset_left = 200.0
offset_right = 300.0
offset_bottom = 100.0
text = "Idling"

[node name="MineZones" type="Node2D" parent="."]
script = ExtResource("3_2au7w")

[node name="gotoMarket" type="RayCast2D" parent="MineZones"]
target_position = Vector2(0, 1500)

[node name="StartMining" type="Button" parent="MineZones"]
offset_right = 100.0
offset_bottom = 100.0
text = "Start!
"

[node name="ShopGUI" type="Node2D" parent="."]

[node name="Momoyo" type="Sprite2D" parent="ShopGUI"]
z_index = 1
texture_filter = 1
texture = ExtResource("4_8ojic")

[node name="mDialogue" type="Label" parent="ShopGUI"]
z_index = 1
offset_left = 8600.0
offset_top = 2977.0
offset_right = 8640.0
offset_bottom = 3000.0

[node name="BG" type="ColorRect" parent="ShopGUI"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.4660673, 0.17293522, 0.009066197, 1)

[node name="Shop" type="GridContainer" parent="."]
visible = false
offset_left = 9000.0
offset_top = 3000.0
offset_right = 9000.0
offset_bottom = 3000.0
columns = 2
script = ExtResource("3_yh3sh")

[node name="Moves" type="Button" parent="Shop"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="MovesText" type="Label" parent="Shop"]
layout_mode = 2

[node name="Bombs" type="Button" parent="Shop"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="BombsText" type="Label" parent="Shop"]
layout_mode = 2

[node name="BombPower" type="Button" parent="Shop"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="BombPowerText" type="Label" parent="Shop"]
layout_mode = 2

[node name="IdleShop" type="GridContainer" parent="."]
offset_left = 9000.0
offset_top = 3000.0
offset_right = 9000.0
offset_bottom = 3000.0
columns = 2
script = ExtResource("4_yh3sh")

[node name="idlerXs" type="Button" parent="IdleShop"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="idlerXsText" type="Label" parent="IdleShop"]
layout_mode = 2

[connection signal="pressed" from="ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="IdleShopButton" to="." method="_on_idle_shop_button_pressed"]
[connection signal="pressed" from="MineZones/StartMining" to="MineZones" method="_on_start_mining_pressed"]
[connection signal="pressed" from="Shop/Moves" to="Shop" method="_on_moves_pressed"]
[connection signal="pressed" from="Shop/Bombs" to="Shop" method="_on_bombs_pressed"]
[connection signal="pressed" from="Shop/BombPower" to="Shop" method="_on_bomb_power_pressed"]
[connection signal="pressed" from="IdleShop/idlerXs" to="IdleShop" method="_on_idler_xs_pressed"]
