[gd_scene format=3 uid="uid://bu802wrejoxy7"]

[ext_resource type="Script" uid="uid://bxanlmg4sgl3u" path="res://scenes/game/mines.gd" id="1_fyqyq"]
[ext_resource type="PackedScene" uid="uid://cs0ie4yghnk43" path="res://scenes/menu/gui.tscn" id="2_1d28e"]
[ext_resource type="Texture2D" uid="uid://5bdm7lmq4ojq" path="res://assets/tiles/mineBG.png" id="2_awnir"]
[ext_resource type="Texture2D" uid="uid://djli38mvmfwab" path="res://assets/buttons/confirm.png" id="2_cuk8l"]
[ext_resource type="Script" uid="uid://bldynvbs8ownu" path="res://scenes/game/mine_zones.gd" id="3_2au7w"]
[ext_resource type="Script" uid="uid://dlii2oup33qw1" path="res://scenes/game/shop.gd" id="3_yh3sh"]
[ext_resource type="Texture2D" uid="uid://qyuk6lkeyewq" path="res://assets/sprites/momoyo.png" id="4_8ojic"]
[ext_resource type="Script" uid="uid://bsyo62gccx47c" path="res://scenes/game/idle_shop.gd" id="4_yh3sh"]
[ext_resource type="Texture2D" uid="uid://bdyer130vmqqx" path="res://assets/UI/Frame.png" id="6_bmy1k"]
[ext_resource type="Texture2D" uid="uid://b8uynqbvyo18s" path="res://assets/sprites/chimata.png" id="6_lrki8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cuk8l"]
size = Vector2(32, 300)

[node name="Mines" type="Node2D" unique_id=168678240]
script = ExtResource("1_fyqyq")

[node name="UI" parent="." unique_id=1021945147 instance=ExtResource("2_1d28e")]
z_index = 4

[node name="Buttons" type="HBoxContainer" parent="." unique_id=159032173]
z_index = 1
offset_right = 106.0
offset_bottom = 31.0

[node name="Mining" type="GridContainer" parent="Buttons" unique_id=291822205]
layout_mode = 2

[node name="StartMining" type="Area2D" parent="Buttons/Mining" unique_id=610721282]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/Mining/StartMining" unique_id=1785056532]
shape = SubResource("RectangleShape2D_cuk8l")

[node name="pressE" type="Sprite2D" parent="Buttons/Mining/StartMining" unique_id=2112425201]
visible = false
texture = ExtResource("2_cuk8l")

[node name="Shop" type="GridContainer" parent="Buttons" unique_id=1311433093]
layout_mode = 2

[node name="ShopButton" type="Area2D" parent="Buttons/Shop" unique_id=630274335]
position = Vector2(-4, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/Shop/ShopButton" unique_id=819904644]
shape = SubResource("RectangleShape2D_cuk8l")

[node name="pressE" type="Sprite2D" parent="Buttons/Shop/ShopButton" unique_id=972870211]
visible = false
texture = ExtResource("2_cuk8l")

[node name="IdleShop" type="GridContainer" parent="Buttons" unique_id=347140359]
layout_mode = 2

[node name="IdleShopButton" type="Area2D" parent="Buttons/IdleShop" unique_id=38656554]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/IdleShop/IdleShopButton" unique_id=210556659]
shape = SubResource("RectangleShape2D_cuk8l")

[node name="pressE" type="Sprite2D" parent="Buttons/IdleShop/IdleShopButton" unique_id=1908135584]
visible = false
texture = ExtResource("2_cuk8l")

[node name="GUI" parent="." unique_id=467049067 instance=ExtResource("2_1d28e")]

[node name="Background" type="Parallax2D" parent="." unique_id=1240152747]
repeat_size = Vector2(128, 128)
repeat_times = 40

[node name="bgDirt" type="Sprite2D" parent="Background" unique_id=1001784887]
texture = ExtResource("2_awnir")

[node name="MineZones" type="Node2D" parent="." unique_id=1655812410]
script = ExtResource("3_2au7w")

[node name="gotoMarket" type="RayCast2D" parent="MineZones" unique_id=176839290]
target_position = Vector2(0, 1500)

[node name="ShopGUI" type="Node2D" parent="." unique_id=1598430449]

[node name="ItemDesc" type="RichTextLabel" parent="ShopGUI" unique_id=521774549]
z_index = 1
offset_right = 40.0
offset_bottom = 40.0
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Characters" type="Node2D" parent="ShopGUI" unique_id=993289514]

[node name="Momoyo" type="Sprite2D" parent="ShopGUI/Characters" unique_id=832550637]
z_index = 1
texture_filter = 1
texture = ExtResource("4_8ojic")

[node name="MomoyoFrame" type="Sprite2D" parent="ShopGUI/Characters" unique_id=360532618]
z_index = 2
texture = ExtResource("6_bmy1k")

[node name="Chimata" type="Sprite2D" parent="ShopGUI/Characters" unique_id=48146707]
z_index = 1
texture = ExtResource("6_lrki8")

[node name="ChimataFrame" type="Sprite2D" parent="ShopGUI/Characters" unique_id=18194135]
z_index = 2
texture = ExtResource("6_bmy1k")

[node name="Names" type="Node2D" parent="ShopGUI" unique_id=1683748031]

[node name="ChimataName" type="Label" parent="ShopGUI/Names" unique_id=867025835]
z_index = 2
offset_right = 40.0
offset_bottom = 23.0
text = "Chimata"

[node name="MomoyoName" type="Label" parent="ShopGUI/Names" unique_id=1909586235]
z_index = 2
offset_right = 40.0
offset_bottom = 23.0
text = "Momoyo"

[node name="mDialogue" type="Label" parent="ShopGUI" unique_id=89094992]
z_index = 2
offset_left = 8600.0
offset_top = 2977.0
offset_right = 8640.0
offset_bottom = 3000.0

[node name="BG" type="ColorRect" parent="ShopGUI" unique_id=350961837]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.4660673, 0.17293522, 0.009066197, 1)

[node name="Shop" type="Node2D" parent="." unique_id=2100498929]
visible = false
script = ExtResource("3_yh3sh")

[node name="GUI" parent="Shop" unique_id=745655068 instance=ExtResource("2_1d28e")]
script = null

[node name="ShopGrid" type="GridContainer" parent="Shop" unique_id=368274365]
offset_right = 40.0
offset_bottom = 40.0
columns = 4

[node name="Moves" type="Button" parent="Shop/ShopGrid" unique_id=299701941]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="MovesText" type="Label" parent="Shop/ShopGrid" unique_id=727215668]
layout_mode = 2

[node name="SpecialUpgrades" type="Button" parent="Shop/ShopGrid" unique_id=148169158]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="SpecialUpgradesText" type="Label" parent="Shop/ShopGrid" unique_id=1618314533]
layout_mode = 2

[node name="Mult" type="Button" parent="Shop/ShopGrid" unique_id=1991028974]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="MultText" type="Label" parent="Shop/ShopGrid" unique_id=2137811368]
layout_mode = 2

[node name="MultStr" type="Button" parent="Shop/ShopGrid" unique_id=1354047970]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="MultStrText" type="Label" parent="Shop/ShopGrid" unique_id=1567542054]
layout_mode = 2

[node name="Bombs" type="Button" parent="Shop/ShopGrid" unique_id=1909974515]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="BombsText" type="Label" parent="Shop/ShopGrid" unique_id=1547544100]
layout_mode = 2

[node name="BombPower" type="Button" parent="Shop/ShopGrid" unique_id=940931693]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="BombPowerText" type="Label" parent="Shop/ShopGrid" unique_id=1987544701]
layout_mode = 2

[node name="TPs" type="Button" parent="Shop/ShopGrid" unique_id=508883719]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="TPsText" type="Label" parent="Shop/ShopGrid" unique_id=411444114]
layout_mode = 2

[node name="TPpower" type="Button" parent="Shop/ShopGrid" unique_id=1506004361]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="TPpowerText" type="Label" parent="Shop/ShopGrid" unique_id=972288049]
layout_mode = 2

[node name="MomoyoFrenzy" type="Button" parent="Shop/ShopGrid" unique_id=597018623]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="MomoyoFrenzyText" type="Label" parent="Shop/ShopGrid" unique_id=566203796]
layout_mode = 2

[node name="FrenzyPower" type="Button" parent="Shop/ShopGrid" unique_id=1806900937]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="FrenzyPowerText" type="Label" parent="Shop/ShopGrid" unique_id=1049175068]
layout_mode = 2

[node name="IdleShop" type="Node2D" parent="." unique_id=1754892754]
script = ExtResource("4_yh3sh")

[node name="IdleShopGrid" type="GridContainer" parent="IdleShop" unique_id=429422126]
offset_right = 40.0
offset_bottom = 40.0
columns = 4

[node name="idlerXs" type="Button" parent="IdleShop/IdleShopGrid" unique_id=1835939952]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="idlerXsText" type="Label" parent="IdleShop/IdleShopGrid" unique_id=2014655477]
layout_mode = 2

[node name="idlerS" type="Button" parent="IdleShop/IdleShopGrid" unique_id=891570614]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="idlerSText" type="Label" parent="IdleShop/IdleShopGrid" unique_id=420523839]
layout_mode = 2

[node name="idlerM" type="Button" parent="IdleShop/IdleShopGrid" unique_id=541072328]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="idlerMText" type="Label" parent="IdleShop/IdleShopGrid" unique_id=1040242485]
layout_mode = 2

[node name="idlerL" type="Button" parent="IdleShop/IdleShopGrid" unique_id=979460505]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="idlerLText" type="Label" parent="IdleShop/IdleShopGrid" unique_id=468813452]
layout_mode = 2

[node name="idlerXl" type="Button" parent="IdleShop/IdleShopGrid" unique_id=837214099]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="idlerXlText" type="Label" parent="IdleShop/IdleShopGrid" unique_id=562860761]
layout_mode = 2

[connection signal="body_entered" from="Buttons/Mining/StartMining" to="." method="_on_start_mining_body_entered"]
[connection signal="body_exited" from="Buttons/Mining/StartMining" to="." method="_on_start_mining_body_exited"]
[connection signal="body_entered" from="Buttons/Shop/ShopButton" to="." method="_on_shop_button_body_entered"]
[connection signal="body_exited" from="Buttons/Shop/ShopButton" to="." method="_on_shop_button_body_exited"]
[connection signal="body_entered" from="Buttons/IdleShop/IdleShopButton" to="." method="_on_idle_shop_button_body_entered"]
[connection signal="body_exited" from="Buttons/IdleShop/IdleShopButton" to="." method="_on_idle_shop_button_body_exited"]
[connection signal="mouse_entered" from="Shop/ShopGrid/Moves" to="." method="_on_moves_mouse_entered"]
[connection signal="mouse_exited" from="Shop/ShopGrid/Moves" to="." method="_on_moves_mouse_exited"]
[connection signal="pressed" from="Shop/ShopGrid/Moves" to="." method="_on_moves_pressed"]
[connection signal="pressed" from="Shop/ShopGrid/SpecialUpgrades" to="." method="_on_special_upgrades_pressed"]
[connection signal="mouse_entered" from="Shop/ShopGrid/Mult" to="." method="_on_mult_mouse_entered"]
[connection signal="mouse_exited" from="Shop/ShopGrid/Mult" to="." method="_on_mult_mouse_exited"]
[connection signal="pressed" from="Shop/ShopGrid/Mult" to="." method="_on_mult_pressed"]
[connection signal="mouse_entered" from="Shop/ShopGrid/MultStr" to="." method="_on_mult_str_mouse_entered"]
[connection signal="mouse_exited" from="Shop/ShopGrid/MultStr" to="." method="_on_mult_str_mouse_exited"]
[connection signal="pressed" from="Shop/ShopGrid/MultStr" to="." method="_on_mult_str_pressed"]
[connection signal="mouse_entered" from="Shop/ShopGrid/Bombs" to="." method="_on_bombs_mouse_entered"]
[connection signal="mouse_exited" from="Shop/ShopGrid/Bombs" to="." method="_on_bombs_mouse_exited"]
[connection signal="pressed" from="Shop/ShopGrid/Bombs" to="." method="_on_bombs_pressed"]
[connection signal="mouse_entered" from="Shop/ShopGrid/BombPower" to="." method="_on_bomb_power_mouse_entered"]
[connection signal="mouse_exited" from="Shop/ShopGrid/BombPower" to="." method="_on_bomb_power_mouse_exited"]
[connection signal="pressed" from="Shop/ShopGrid/BombPower" to="." method="_on_bomb_power_pressed"]
[connection signal="mouse_entered" from="Shop/ShopGrid/TPs" to="." method="_on_t_ps_mouse_entered"]
[connection signal="mouse_exited" from="Shop/ShopGrid/TPs" to="." method="_on_t_ps_mouse_exited"]
[connection signal="pressed" from="Shop/ShopGrid/TPs" to="." method="_on_t_ps_pressed"]
[connection signal="mouse_entered" from="Shop/ShopGrid/TPpower" to="." method="_on_t_ppower_mouse_entered"]
[connection signal="mouse_exited" from="Shop/ShopGrid/TPpower" to="." method="_on_t_ppower_mouse_exited"]
[connection signal="pressed" from="Shop/ShopGrid/TPpower" to="." method="_on_t_ppower_pressed"]
[connection signal="mouse_entered" from="Shop/ShopGrid/MomoyoFrenzy" to="." method="_on_momoyo_frenzy_mouse_entered"]
[connection signal="mouse_exited" from="Shop/ShopGrid/MomoyoFrenzy" to="." method="_on_momoyo_frenzy_mouse_exited"]
[connection signal="pressed" from="Shop/ShopGrid/MomoyoFrenzy" to="." method="_on_momoyo_frenzy_pressed"]
[connection signal="mouse_entered" from="Shop/ShopGrid/FrenzyPower" to="." method="_on_frenzy_power_mouse_entered"]
[connection signal="mouse_exited" from="Shop/ShopGrid/FrenzyPower" to="." method="_on_frenzy_power_mouse_exited"]
[connection signal="pressed" from="Shop/ShopGrid/FrenzyPower" to="." method="_on_frenzy_power_pressed"]
[connection signal="pressed" from="IdleShop/IdleShopGrid/idlerXs" to="." method="_on_idler_xs_pressed"]
[connection signal="pressed" from="IdleShop/IdleShopGrid/idlerS" to="." method="_on_idler_s_pressed"]
[connection signal="pressed" from="IdleShop/IdleShopGrid/idlerM" to="." method="_on_idler_m_pressed"]
[connection signal="pressed" from="IdleShop/IdleShopGrid/idlerL" to="." method="_on_idler_l_pressed"]
[connection signal="pressed" from="IdleShop/IdleShopGrid/idlerXl" to="." method="_on_idler_xl_pressed"]
